another revision on Project: Google Fonts

--- a/04-Typography/Project-Google-Fonts/index.html
+++ b/04-Typography/Project-Google-Fonts/index.html
@@ -15,7 +15,7 @@
           <h1>Christina Truong</h1>
           <h2>Tech Educator + Front-end Developer</h2>
 
-          <p>As a developer, <i>I specialize <b>in</b> creating modular</i> and scalable front-end architectures. As an educator, I focus on creating inclusive learning environments, instructor training and curriculum development.</p>
+          <p>As a developer, I specialize in creating modular and scalable front-end architectures. As an educator, I focus on creating inclusive learning environments, instructor training and curriculum development.</p>
           <p>I’m also exploring more creative pursuits designing tee shirts and accessories for <a href="http://teethang.com" target="_blank">Nuthin’ But a Tee Thang</a>, an online store I’m running with my husband.</p>
         </div>
       </header>
