Position and z-index & chapter quiz summary done

--- a/05-Introduction to float/project-float-and-box-model-fix/index.html
+++ b/05-Introduction to float/project-float-and-box-model-fix/index.html
@@ -107,7 +107,7 @@
 
       <!-- *************  EDUCATION & CERTIFICATIONS *********** -->
       <section class="education">
-        <div class="content-wrap">
+        <div class="content-wrap odd">
           <h2>Education</h2>
 
           <section>
